--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,10 +62,10 @@
             <ul class="social">
                <!-- <li><a href="https://twitter.com/madebygps"><i class="fa fa-twitter"></i></a></li>
                <li><a href="https://madebygps.com"><i class="fa fa-external-link"></i></a></li> -->
-               <li><a href="https://linkedin.com/in/gwyneth-pena"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/rowby-p-94244992/"><i class="fa fa-linkedin"></i></a></li>
                <!-- <li><a href="https://instagram.com/madebygps"><i class="fa fa-instagram"></i></a></li>
                <li><a href="https://youtube.com/madebygps"><i class="fa fa-youtube"></i></a></li> -->
-               <li><a href="https://github.com/madebygps/cgc-azure-resume"><i class="fa fa-github"></i></a></li>
+               <li><a href="https://github.com/rowbypierre"><i class="fa fa-github"></i></a></li>
             </ul>
          </div>
       </div>
