--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,11 +60,11 @@
             
             <p>and this page has been viewed <a id="counter"></a> times :) </p> 
             <ul class="social">
-               <!-- <li><a href="https://twitter.com/madebygps"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="https://madebygps.com"><i class="fa fa-external-link"></i></a></li> -->
+               <!--<li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>-->
                <li><a href="https://www.linkedin.com/in/rowby-p-94244992/"><i class="fa fa-linkedin"></i></a></li>
-               <!-- <li><a href="https://instagram.com/madebygps"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="https://youtube.com/madebygps"><i class="fa fa-youtube"></i></a></li> -->
+               <!--<li><a href="https://"><i class="fa fa-external-link"></i></a></li>-->
+               <!--<li><a href="https://instagram.com/"><i class="fa fa-instagram"></i></a></li>-->
+               <!--<li><a href="https://youtube.com/"><i class="fa fa-youtube"></i></a></li>-->
                <li><a href="https://github.com/rowbypierre"><i class="fa fa-github"></i></a></li>
             </ul>
          </div>
@@ -267,7 +267,7 @@
                <!--<li><a href="https://"><i class="fa fa-external-link"></i></a></li>-->
                <!--<li><a href="https://instagram.com/"><i class="fa fa-instagram"></i></a></li>-->
                <!--<li><a href="https://youtube.com/"><i class="fa fa-youtube"></i></a></li>-->
-               <li><a href="https://github.com/rowbypierre/azure-resume"><i class="fa fa-github"></i></a></li>
+               <li><a href="https://github.com/rowbypierre"><i class="fa fa-github"></i></a></li>
             </ul>
 
             <ul class="copyright">
